[gd_scene load_steps=8 format=3 uid="uid://dorf8r774dxvq"]

[ext_resource type="Script" path="res://SCM.gd" id="1_e08x4"]
[ext_resource type="Script" path="res://sig_sub.gd" id="2_mw5r8"]
[ext_resource type="Script" path="res://Button.gd" id="3_d4865"]
[ext_resource type="Script" path="res://gtv_sa.gd" id="3_e6t7j"]
[ext_resource type="Script" path="res://over_border.gd" id="3_frdyc"]
[ext_resource type="Script" path="res://gtv_menu.gd" id="3_ouv35"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vthgb"]
size = Vector2(40, 30)

[node name="GTV001" type="Node2D"]
script = ExtResource("1_e08x4")

[node name="hint" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -63.0
offset_top = -37.0
offset_right = 63.0
offset_bottom = 40.0
mouse_filter = 1
script = ExtResource("3_ouv35")

[node name="over_border" type="Control" parent="hint"]
anchors_preset = 0
offset_left = -260.0
offset_top = -154.0
offset_right = 395.0
offset_bottom = 259.0
script = ExtResource("3_frdyc")

[node name="window" type="Polygon2D" parent="hint"]
color = Color(0.518933, 0.4984, 0.56, 1)
polygon = PackedVector2Array(344, -107, -169, -106, -168, 218, 355, 218)

[node name="Polygon2d" type="Polygon2D" parent="hint"]
modulate = Color(0.607843, 0.607843, 0.607843, 0.576471)
polygon = PackedVector2Array(84, 53, 84, 21, 94, 10, 102, 0, 110, -13, 124, -38, 134, -63, 142, -95, 340, -96, 344, 210, 134, 208, 133, 84, 115, 70, 99, 61)

[node name="HBoxContainer" type="HBoxContainer" parent="hint"]
layout_mode = 0
offset_left = -60.0
offset_top = -81.0
offset_right = 333.0
offset_bottom = 218.0
alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="hint/HBoxContainer"]
layout_mode = 2
offset_right = 190.0
offset_bottom = 299.0
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="hint/HBoxContainer"]
layout_mode = 2
offset_left = 194.0
offset_right = 198.0
offset_bottom = 299.0

[node name="VBoxContainer" type="VBoxContainer" parent="hint/HBoxContainer"]
layout_mode = 2
offset_left = 202.0
offset_right = 393.0
offset_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="win_close" type="Button" parent="hint/HBoxContainer/VBoxContainer"]
layout_mode = 2
offset_left = 173.0
offset_right = 191.0
offset_bottom = 31.0
size_flags_horizontal = 8
text = "X"

[node name="open" type="Button" parent="hint/HBoxContainer/VBoxContainer"]
layout_mode = 2
offset_top = 35.0
offset_right = 191.0
offset_bottom = 66.0
text = "open"
script = ExtResource("3_d4865")

[node name="close" type="Button" parent="hint/HBoxContainer/VBoxContainer"]
layout_mode = 2
offset_top = 70.0
offset_right = 191.0
offset_bottom = 101.0
text = "close"
script = ExtResource("3_d4865")

[node name="sens_area" type="Area2D" parent="."]
script = ExtResource("3_e6t7j")

[node name="CollisionShape2d" type="CollisionShape2D" parent="sens_area"]
shape = SubResource("RectangleShape2D_vthgb")

[node name="icon" type="Node2D" parent="."]
visible = false

[node name="menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Valve" type="Node2D" parent="."]

[node name="right" type="Polygon2D" parent="Valve"]
modulate = Color(0.443137, 0.443137, 0.443137, 1)
color = Color(1, 0.458824, 0, 1)
polygon = PackedVector2Array(20, -15, 20, 15, 0, 0)
script = ExtResource("2_mw5r8")

[node name="Polygon2d" type="Polygon2D" parent="Valve"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
color = Color(0.686275, 0, 0.588235, 1)
polygon = PackedVector2Array(0, 0, -20, -15, -20, 15)

[connection signal="mouse_exited" from="hint" to="hint" method="_on_hint_mouse_exited"]
[connection signal="mouse_entered" from="hint/over_border" to="hint/over_border" method="_on_over_border_mouse_entered"]
[connection signal="mouse_exited" from="hint/over_border" to="hint/over_border" method="_on_over_border_mouse_exited"]
[connection signal="button_up" from="hint/HBoxContainer/VBoxContainer/win_close" to="hint" method="_on_win_close_button_up"]
[connection signal="pressed" from="hint/HBoxContainer/VBoxContainer/open" to="hint/HBoxContainer/VBoxContainer/open" method="_on_button_pressed"]
[connection signal="pressed" from="hint/HBoxContainer/VBoxContainer/close" to="hint/HBoxContainer/VBoxContainer/close" method="_on_button_pressed"]
[connection signal="input_event" from="sens_area" to="sens_area" method="_on_sens_area_input_event"]
